www/docs/style/sass/pages/_alert.scss
.alerts-header {
  position: relative;
  text-align: center;
  padding: 1em 0;
  color: #000; // improve contrast against light background image

  background-image: url(/images/pmqs-flickr-53754559691-by-nc-nd.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 70%;

  @media (min-width: $medium-screen) {
    padding: 2em 0;
  }

  @media (min-width: $large-screen), (min-height: 600px) {
    padding: 50px 0;
  }

  @media (min-height: 700px) {
    padding: 75px 0;
  }

  // Stop hero content crashing into the sides of the window
  .full-page__unit {
    padding-left: 1em;
    padding-right: 1em;

    @media (min-width: $medium-screen) {
      padding-left: 2em;
      padding-right: 2em;
    }
  }

  h1 {
    margin-top: 0;
    line-height: 1.1em;
    font-size: 1.6em;
    color: inherit;

    @media (min-width: $medium-screen) {
      font-size: 2em;
    }

    @media (min-width: $large-screen) {
      font-size: 2.5em;
    }
  }

  p.lead {
    line-height: 1.4em; // down from default 1.6em
  }

  .image-attribution {
    position: absolute;
    bottom: 1em;
    right: 1em;
    font-size: 0.625em;
    margin: 0;
    opacity: 0.5;
    line-height: 1.2em;

    a {
      color: inherit;
    }
  }
}

// An extra big header, designed for pages where all
// the important content is already in the header.
.alerts-header--jumbo {

  @media (min-width: $medium-screen) {
    padding: 100px 0 125px 0;
  }

  @media (min-width: $large-screen) and (min-height: 600px) {
    padding: 100px 0 125px 0;
  }

  @media (min-width: $large-screen) and (min-height: 700px) {
    padding: 150px 0 200px 0;
  }

  @media (min-width: $large-screen) and (min-height: 800px) {
    padding: 200px 0 250px 0;
  }
}

// Alert form
.alert-form__section {
  margin-bottom: 2.5rem;

  :last-child {
      margin-bottom: 0;
  }
}

.alert-form__subtitle {
  margin-bottom: 0.5rem;
}

.alert-form__label {
  display: inline;
  margin-left: 0.5em;
}

.alert__controls {
  margin-bottom: 1rem;
  form {
      display: inline;
  }

  button {
      margin-bottom: 0;
      span {
          margin-right: 0.2rem;
      }
  }
}

.alerts-message {
  max-width: 36em;
  margin: 2em auto 0 auto;

  & > :first-child {
    margin-top: 0;
  }

  & > :last-child {
    margin-bottom: 0;
  }

  .button {
    margin-bottom: 0;
  }
}

.alerts-message--reminder,
.alerts-message--error {
  margin-bottom: 2em;
  padding: 1em 0;

  h2 {
    color: inherit;
    font-size: 1.2em;
    margin-right: 0.5em;
  }
}

.alerts-message--reminder {
  border-top: 1px solid #99c;
  border-bottom: 1px solid #99c;
  color: #669;
}

.alerts-message--error {
  border-top: 1px solid #c99;
  border-bottom: 1px solid #c99;
  color: #900;

  h2 {
    display: inline;
  }

  p {
    display: inline;
  }
}

.alerts-message--confirmation-sent,
.alerts-message--confirmation-received {
  border-top: 1px solid #ccc;
  padding: 2em 0;
}

.alerts-form {

  h3 {
    font-weight: 400;
  }

  label {
      color: $body-font-color;
      font-size: 1.1rem;
      line-height: 1.2;
      margin-bottom: 0.75rem;
  }

  input[type="checkbox"], input[type="radio"] {
      display: inline-block;
      height: 1.5rem;
      width: 1.5rem;
      margin: 0 0.25rem 0 0;
      vertical-align: middle;

       + label {
           display: inline-block;
           margin-bottom: 0;
           line-height: 1.5rem;
           vertical-align: middle;
       }
  }

  input[type="text"], select {
      max-width: 400px;
      height: 40px;
      border-color: $body-font-color;
  }

  .checkbox-wrapper {
      display: flex;
      flex-direction: row;
      
      input[type="checkbox"], input[type="radio"] {
          flex-shrink: 0;
      }
  }

  .checkbox-group  {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
      gap: 1rem;
  }
}

// If browser supports background-size,
// and we have space, give the message an icon
@media (min-width: $medium-screen) {
  html.backgroundsize {

    .alerts-message--confirmation-sent,
    .alerts-message--confirmation-received {
      text-align: left;
      padding-left: 25%;
      background: transparent url(/images/icons/circle-tick.png) 6% 50% no-repeat;
      background-size: 20%;

      @media (min-width: $large-screen) {
        background-position: 15% 50%;
      }
    }

    .alerts-message--confirmation-sent {
      background-image: url(/images/icons/circle-email.png);
    }

    .alerts-message--confirmation-received {
      // Quick hack to visually centre the icon for this particular message
      padding-bottom: 0;
    }
  }
}

.alert-section {
    @include grid-row(collapse);

    margin-top: 2em;
    margin-bottom: 2em;
    border-radius: 3px;
    background-color: white;
}

.alert-section__header {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5rem;

  button, h2 {
      margin-bottom: 0;
      margin-top: 0;
  }
}

.alert-section__message {
  background-color: #FFFCD9; // very light yellow
  padding: 1rem;
}

.alert-section__primary {
    @include grid-column(12, $collapse: true);
    padding: 1.5em;
    border-bottom: 1px solid $colour_off_white;

    @media (min-width: $medium-screen) {
        padding: 2.5em 3em;
    }

    @media (min-width: $large-screen) {
        @include grid-column(8, $collapse: true);
        padding: 2.5em 3em;
        border-bottom: none;
        border-right: 1px solid $colour_off_white;
    }

    &:last-child {
        border: none;
    }

    input#alertsearch {
      margin: 0;
    }
}

.alert-section__secondary {
    @include grid-column(12, $collapse: true);
    padding: 1.5em;

    @media (min-width: $medium-screen) {
        padding: 2.5em 3em;
    }

    @media (min-width: $large-screen) {
        @include grid-column(4, $collapse: true);
        padding: 2.5em 3em;
    }
}

.alert-section--feedback {
    background-color: #FFFCD9; // very light yellow

    .alert-section__primary,
    .alert-section__secondary {
        @media (min-width: $medium-screen) {
            padding-top: 2em;
            padding-bottom: 2em;
        }
    }

    h3 {
        margin-top: 0;
    }

    p:last-child {
        margin-bottom: 0;
    }
}

.alert-section--disambiguation {
    li {
        margin: 1em 0;
    }

    .error {
        display: block;
        margin-top: 1em;
        color: $light-text;
    }

    .button {
        margin-left: 0.5em;
        margin-bottom: 0;
    }
}

.alert-page-error {
    display: block;
    color: $colour_pale_red;
    margin-bottom: 0.2em;

    & + input {
        border-color: $colour_pale_red;
    }
}

.alert-page-search-tips {
    color: $light-text;
    font-size: 0.9em;
    padding-top: 5.5rem;

    h3 {
        color: inherit;
        margin: 0;
    }

    p {
        margin: 1em 0 0 0;
    }
}

.alerts-manage__list {
    @include unstyled-list();
    margin: 0 0 2em 0;

    li {
        & + li {
            margin-top: 1em;
        }

        & > :last-child {
            margin-bottom: 0;
        }
    }

    form {
        margin-top: 0.3em;
    }

    .button {
        margin-bottom: 0;
    }

    .button + .button {
        margin-left: 0.5em;
    }
}

.alert-meta {
  .alert-meta__results {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      column-gap: 1rem;
      row-gap: 1rem;
      align-items: center;
      margin-bottom: 1rem;
    }

    .alert-meta__item {
        border-radius: 0.5rem;
        background-color: $primary-color-200;
        padding: 0.75rem;
        width: fit-content;

        dt { 
            font-size: 0.7rem;
            text-transform: uppercase;
            margin-bottom: 0;
        }
    
        dd {
            margin-bottom: 0;
            font-size: 1.1rem;
        }
    }


}

// Accordion Keyword
.keyword-alert-accordion {
  margin-top: 2rem;
  h3 {
    font-weight: 400;
    font-size: 1rem;
  }
}

.keyword-alert-accordion__button {
  @extend .accordion__button;
}

.keyword-alert-accordion__button--suspended {
  background-color: #cccccc !important; // Gray color for suspended alerts
  color: $body-font-color !important; // Keep text black for suspended alerts
  
  &[aria-expanded="true"] {
    background-color: #dddddd !important;
    border: 1px solid #999999 !important;
    color: $body-font-color !important;
  }
  
  &:focus, &:active, &:hover {
    background-color: #cccccc !important;
    color: $body-font-color !important;
  }
  
  &:focus[aria-expanded="false"], &:active[aria-expanded="false"], &:hover[aria-expanded="false"] {
    background-color: #cccccc !important;
    border: none !important;
    color: $body-font-color !important;
  }
}

.keyword-alert-accordion__content {
  @extend .accordion__content;
}

.keyword-alert-accordion__button-content {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: start;
  gap: 0.25rem;
  
  .keyword-alert-accordion__subtitle {
      font-size: 0.75rem;
      font-weight: bold;
  }
}

.keyword-alert-accordion__keyword-list {
  margin-bottom: 1.5rem;
}

.keyword-list {
    list-style: none;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 0.5rem;
    margin-left: 0;

    li {
        font-weight: bold;
        i {
            margin-left: 0.25rem;
        }
    }
}

.keyword-alert-accordion__tag,
.keyword-list__tag {
  @extend .tag;
}

.keyword-alert-accordion__tag--included,
.keyword-list__tag--included  {
  @extend .tag--primary-light;
}

.keyword-alert-accordion__tag--excluded,
.keyword-list__tag--excluded  {
  @extend .tag--red;
}

